--- a/templates/home.html
+++ b/templates/home.html
@@ -12,10 +12,10 @@
     <table>
       <tr id="row1">
         <td><div class="brown"><p>Step 1: Authorize? Click the Sea Turtle :)</p></div></td>
-        <td><div class="brown"><p>Step 2: Select and copy your classes from <a href="https://act.ucsd.edu/webreg2">WebReg</a></p></div></td>
+        <td><div class="brown"><p>Step 2: Select and copy your classes from <a target="_blank" rel="noopener noreferrer" href="https://act.ucsd.edu/webreg2">WebReg</a></p></div></td>
       </tr>
       <tr id="row2">
-        <td><a href=""><img src="https://cdn.cnn.com/cnnnext/dam/assets/181205104053-01-turtle-plastic-super-tease.jpg"></a></td>
+        <td><a href="/authorize"><img src="https://cdn.cnn.com/cnnnext/dam/assets/181205104053-01-turtle-plastic-super-tease.jpg"></a></td>
         <td><img src="static/second.png"></td>
       </tr>
       <tr id="row3">
@@ -32,7 +32,7 @@
     </table>
   </div>
 
-  <a href="revoke">Revoke permission</a>
+  <a href="revoke">{{data["revoke"]}}</a>
   <p>{{data["email"]}}</p>
 
   </body>
